新增bsdiff